--- a/jste/playground/index.html
+++ b/jste/playground/index.html
@@ -58,6 +58,25 @@
     <script src="./parser.web.js"></script>
     <style>
         .CodeMirror { height: 100%; }
+        .style-2::-webkit-scrollbar-track
+        {
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+            border-radius: 10px;
+            background-color: transparent;
+        }
+
+        .style-2::-webkit-scrollbar
+        {
+            width: 12px;
+            background-color: transparent;
+        }
+
+        .style-2::-webkit-scrollbar-thumb
+        {
+            border-radius: 10px;
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+            background-color: #302020;
+        }
     </style>
 </head>
 <body>
@@ -68,7 +87,7 @@
         </div>
     </div>
     <div class="column" style="background-color:#322931; color: #aaa">
-        <div id="html">
+        <div class="style-2" id="html" style="height: 100%;overflow-y: scroll;">
 
         </div>
     </div>
